Specify `--enable-native-access=ALL-UNNAMED` to the JVM to suppress "A restricted method in java.lang.System has been called" warnings
The full warning is:

```
WARNING: A restricted method in java.lang.System has been called
WARNING: java.lang.System::load has been called by org.jetbrains.skiko.Library in an unnamed module (skiko-awt-0.9.37.3.jar)
WARNING: Use --enable-native-access=ALL-UNNAMED to avoid a warning for callers in this module
WARNING: Restricted methods will be blocked in a future release unless native access is enabled
```